update the setup for data paths

--- a/ASR/ASR.ipynb
+++ b/ASR/ASR.ipynb
@@ -45,6 +45,9 @@
    "outputs": [],
    "source": [
     "# Load all audio data path\n",
+    "# The data file path should be like: './Data/user/user.wav'\n",
+    "# The label should be like: 'user'\n",
+    "\n",
     "audio_files = glob('./Data/*.wav')\n",
     "\n",
     "# Get the labels of each file:\n",
