--- a/ASR/ASR.ipynb
+++ b/ASR/ASR.ipynb
@@ -137,6 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# audio_sample = librosa.load('./Data/Lin.mp3')\n",
     "partitions = ... # audio_sample.shape[0] // (sr * 3)\n",
     "sliced_audio = ... # sr * 3\n",
     "\n",
