--- a/ASR/ASR.ipynb
+++ b/ASR/ASR.ipynb
@@ -218,17 +218,19 @@
     "    features = []\n",
     "    labels = []\n",
     "    \n",
-    "    for audio_file in os.listdir(data_dir)[1:]:\n",
+    "    for audio_file in os.listdir(data_dir):\n",
+    "        if audio_file == '.DS_Store':\n",
+    "            continue\n",
     "        label = audio_file.split('.')[0]\n",
     "        file_path = os.path.join(data_dir, audio_file)\n",
     "        # Load the audio file\n",
     "        audio, sr = librosa.load(file_path)\n",
     "        partitions = audio.shape[0] // (sr * 3)\n",
-    "        sr_sliced = sr * 3\n",
+    "        sr_scaled = sr * 3\n",
     "                \n",
     "        audios = slice_audio(audio,\n",
     "                            partitions=partitions,\n",
-    "                            sr_scaled=sr_sliced)\n",
+    "                            sr_scaled=sr_scaled)\n",
     "\n",
     "        for aud in audios:\n",
     "            # Extract MFCC features\n",
@@ -362,6 +364,172 @@
     "print(classification_report(ytest, y_pred))\n",
     "print(confusion_matrix(ytest, y_pred))\n",
     "print(accuracy_score(ytest, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classify the human speech from non human speech"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mel_data():\n",
+    "    features, labels = mel_freq()\n",
+    "\n",
+    "    num_samples = features.shape[0]\n",
+    "    num_mfcc = features[0].shape[0]\n",
+    "    num_frames = features[0].shape[1]\n",
+    "\n",
+    "    features_2d = np.reshape(features, (num_samples, num_frames * num_mfcc))\n",
+    "    label_map = {'NonSpeech0': 0, 'NonSpeech1': 0, 'NonSpeech2': 0, 'Lin': 1, 'Maria': 1, 'Martin': 1} # rename the keys\n",
+    "    labels = [label_map[x] for x in labels]\n",
+    "    \n",
+    "    return features_2d, labels\n",
+    "\n",
+    "features_2d, labels = get_mel_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy.abc import y\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "Xtrain, Xtest, ytrain, ytest = train_test_split(features_2d, labels, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random forest classifer model\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rfc = RandomForestClassifier(n_estimators=500,\n",
+    "                             criterion='log_loss',\n",
+    "                             max_depth=4,\n",
+    "                             min_samples_split=.2,\n",
+    "                             min_samples_leaf=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-4 {color: black;background-color: white;}#sk-container-id-4 pre{padding: 0;}#sk-container-id-4 div.sk-toggleable {background-color: white;}#sk-container-id-4 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-4 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-4 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-4 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-4 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-4 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-4 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-4 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-4 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-4 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-4 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-4 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-4 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-4 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-4 div.sk-item {position: relative;z-index: 1;}#sk-container-id-4 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-4 div.sk-item::before, #sk-container-id-4 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-4 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-4 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-4 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-4 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-4 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-4 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-4 div.sk-label-container {text-align: center;}#sk-container-id-4 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-4 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-4\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(criterion=&#x27;log_loss&#x27;, max_depth=4, min_samples_leaf=2,\n",
+       "                       min_samples_split=0.2, n_estimators=500)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" checked><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(criterion=&#x27;log_loss&#x27;, max_depth=4, min_samples_leaf=2,\n",
+       "                       min_samples_split=0.2, n_estimators=500)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "RandomForestClassifier(criterion='log_loss', max_depth=4, min_samples_leaf=2,\n",
+       "                       min_samples_split=0.2, n_estimators=500)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfc.fit(Xtrain, ytrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        12\n",
+      "           1       1.00      1.00      1.00        12\n",
+      "\n",
+      "    accuracy                           1.00        24\n",
+      "   macro avg       1.00      1.00      1.00        24\n",
+      "weighted avg       1.00      1.00      1.00        24\n",
+      "\n",
+      "[[12  0]\n",
+      " [ 0 12]]\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the model performance\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report\n",
+    "y_pred = rfc.predict(Xtest)\n",
+    "print(classification_report(ytest, y_pred))\n",
+    "print(confusion_matrix(ytest, y_pred))\n",
+    "print(accuracy_score(ytest, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inference of underlying data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mel_infer_data(data_dir='./inference/'):\n",
+    "    features_inf, labels_inf = mel_freq(data_dir)\n",
+    "    \n",
+    "    num_samples = features_inf.shape[0]\n",
+    "    num_mfcc = features_inf[0].shape[0]\n",
+    "    num_frames = features_inf[0].shape[1]\n",
+    "\n",
+    "    features_inf_2d = np.reshape(features_inf, (num_samples, num_frames * num_mfcc))\n",
+    "    \n",
+    "    label_map = {'NonHuman': 0, 'Human': 1}\n",
+    "    labels_inf = np.array([label_map['NonHuman'] if 'NonSpeech' in value else label_map['Human'] for value in labels_inf])\n",
+    "    return features_inf_2d, labels_inf\n",
+    "features_inf_2d, labels_inf = get_mel_infer_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]\n",
+      "Original data class: \n",
+      " [1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_inf = rfc.predict(features_inf_2d)\n",
+    "print(y_inf) # should return 1 as there is only human speech data in the underlying dataset\n",
+    "print(f'Original data class: \\n {labels_inf}')"
    ]
   }
  ],
